--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "dev:prepare": "esno scripts/prepare.ts",
     "dev:web": "vite",
     "dev:js": "npm run build:js -- --mode development",
-    "build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:js",
+    "dev:bg": "tsup --watch ./src",
+    "build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:js build:bg",
     "build:prepare": "esno scripts/prepare.ts",
     "build:web": "vite build",
     "build:js": "vite build --config vite.config.content.ts",
+    "build:bg": "tsup",
     "pack": "cross-env NODE_ENV=production run-p pack:*",
     "pack:zip": "rimraf extension.zip && jszip-cli add extension/* -o ./extension.zip",
     "pack:crx": "crx pack extension -o ./extension.crx",
@@ -21,30 +23,39 @@
     "start:firefox": "web-ext run --source-dir ./extension --target=firefox-desktop",
     "clear": "rimraf extension/dist extension/manifest.json extension.*",
     "lint": "eslint '{src,scripts}/**/*.{json,ts,js,vue}'",
-    "test": "vitest test"
+    "test": "vitest test",
+    "tmp": "pnpm nodemon --ignore \"*.d.ts\" --watch \"src\" -e ts,js,mjs,json,vue --exec \"pnpm build\""
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.20.6",
     "@ffflorian/jszip-cli": "^3.1.6",
     "@iconify/json": "^2.1.30",
+    "@types/download": "8.0.1",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.25",
     "@types/webextension-polyfill": "^0.8.3",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "5.0.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/compiler-sfc": "^3.2.33",
     "@vue/test-utils": "^2.0.0-rc.20",
     "@vueuse/core": "^8.2.6",
+    "body-parser": "1.19.1",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
+    "download": "8.0.0",
     "eslint": "^8.13.0",
     "esno": "^0.14.1",
+    "express": "4.17.2",
     "fs-extra": "^10.1.0",
     "jsdom": "^19.0.0",
     "kolorist": "^1.5.1",
+    "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "safe-compare": "1.1.4",
+    "tsup": "^5.12.5",
     "typescript": "^4.6.3",
     "unplugin-auto-import": "^0.7.1",
     "unplugin-icons": "^0.14.1",
